Fixed the headers colors in contrast.

--- a/src/pmt/css/PreferencesManagementTool.css
+++ b/src/pmt/css/PreferencesManagementTool.css
@@ -596,3 +596,17 @@ input:checked + .addToMyPreferencesStar + .addToMyPreferencesLabel[title]:after 
 	color: black;
 	background-color: #D3DFDF;
 }
+
+.flc-uiOptions-contrast-theme .headerImage {
+	background-color: black !important;
+	color: yellow !important;
+}
+
+.flc-uiOptions-contrast-theme .headerTitle {
+	background-color: transparent !important;
+	color: black !important;
+}
+
+.flc-uiOptions-contrast-theme .addToMyPreferencesLabel {
+	background-color: transparent !important;
+}
